RESOLVED FIXED 142265
[CSS Grid Layout] ASSERTION FAILED !track.growthLimitIsInfinite() in RenderGrid::computeUsedBreadthOfGridTracks
https://bugs.webkit.org/show_bug.cgi?id=142265
Summary [CSS Grid Layout] ASSERTION FAILED !track.growthLimitIsInfinite() in RenderGr...
Sergio Villar Senin
Reported 2015-03-04 00:59:21 PST
Originally reported for blink https://code.google.com/p/chromium/issues/detail?id=463079 it's also failing in WebKit with the following test case. <!DOCTYPE html> <style> * { display: -webkit-inline-grid; height: calc(100% - 10px); grid-template-rows: minmax(100%, -webkit-max-content); } </style> <summary> <style></style> </summary> The problem is that when computing the height of the grid container we can get -1 and we aren't handling that case properly.
Attachments
Patch (4.53 KB, patch)
2015-03-04 06:50 PST, Sergio Villar Senin
no flags
Archive of layout-test-results from ews101 for mac-mavericks (550.20 KB, application/zip)
2015-03-04 07:35 PST, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-mavericks-wk2 (691.27 KB, application/zip)
2015-03-04 07:43 PST, Build Bot
no flags
Removed an invalid carry return added by mistake in the expectations file (4.52 KB, patch)
2015-03-04 07:45 PST, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2015-03-04 06:50:42 PST
Build Bot
Comment 2 2015-03-04 07:35:56 PST
Comment on attachment 247856 [details] Patch Attachment 247856 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6398349741654016 New failing tests: fast/css-grid-layout/grid-indefinite-calculated-height-crash.html
Build Bot
Comment 3 2015-03-04 07:35:59 PST
Created attachment 247857 [details] Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 4 2015-03-04 07:43:37 PST
Comment on attachment 247856 [details] Patch Attachment 247856 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6572637098606592 New failing tests: fast/css-grid-layout/grid-indefinite-calculated-height-crash.html
Build Bot
Comment 5 2015-03-04 07:43:39 PST
Created attachment 247858 [details] Archive of layout-test-results from ews107 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Sergio Villar Senin
Comment 6 2015-03-04 07:45:27 PST
Created attachment 247859 [details] Removed an invalid carry return added by mistake in the expectations file
Sergio Villar Senin
Comment 7 2015-03-06 00:56:23 PST
Comment on attachment 247859 [details] Removed an invalid carry return added by mistake in the expectations file Clearing flags on attachment: 247859 Committed r181141: <http://trac.webkit.org/changeset/181141>
Sergio Villar Senin
Comment 8 2015-03-06 00:56:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.