[CSS Grid Layout] ASSERTION FAILED !track.growthLimitIsInfinite() in RenderGrid::computeUsedBreadthOfGridTracks https://bugs.webkit.org/show_bug.cgi?id=142265

Reviewed by Darin Adler.

Source/WebCore:

 The problem is that computeUsedBreadthOfGridTracks() could return
-1 for rows because we're calling computeContentLogicalHeight()
which can indeed return -1. In those cases we should clamp the
value to 0 the same as Flexbox does otherwise we could end up with
a negative value in the min track sizing function.

Test: fast/css-grid-layout/grid-indefinite-calculated-height-crash.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::computeUsedBreadthOfSpecifiedLength):

LayoutTests:

New test that crashes on Debug builds if we don't handle the case
of computeUsedBreadthOfGridTracks() returning -1.

* fast/css-grid-layout/grid-indefinite-calculated-height-crash-expected.txt: Added.
* fast/css-grid-layout/grid-indefinite-calculated-height-crash.html: Added.

Canonical link: https://commits.webkit.org/160425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181141 268f45cc-cd09-0410-ab3c-d52691b4dbfc